<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LoginActivity">

<FrameLayout
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_to_bauss"
        android:textAlignment="center"
        android:textColor="#7364FF"
        android:textSize="42sp"
        android:textStyle="normal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_login_header" />
</FrameLayout>

<TextView
    android:id="@+id/tvLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="33dp"
    android:layout_marginTop="0dp"
    android:text="@string/log_in_tv"
    android:textAlignment="textStart"
    android:textColor="#000000"
    android:textSize="28sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/frameLayout" />

<LinearLayout
    android:id="@+id/llEmailContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="33dp"
    android:layout_marginTop="14dp"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_adress_tv"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_edittext_radius_with_10_dp"
        android:inputType="textEmailAddress"
        app:backgroundTint="@null"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
</LinearLayout>

<LinearLayout
    android:id="@+id/llPasswordContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="33dp"
    android:layout_marginTop="14dp"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/llEmailContainer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_tv"
        android:textSize="15sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_edittext_radius_with_10_dp"
            android:inputType="textPassword"
            app:backgroundTint="@null"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/ivShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="11dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            app:tint="#B4B4B4" />
    </FrameLayout>
</LinearLayout>

<Button
    android:id="@+id/btnLogin"
    android:layout_width="match_parent"
    android:layout_height="41dp"
    android:layout_marginHorizontal="33dp"
    android:layout_marginTop="30dp"
    android:background="@drawable/background_button"
    android:elevation="5dp"
    android:text="@string/log_in_bttn"
    app:backgroundTint="@null"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/llPasswordContainer" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/background_button_only_border"
        android:elevation="5dp"
        android:text="@string/sign_up"
        android:textColor="#7364ff"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

<TextView
    app:layout_constraintTop_toBottomOf="@id/btnSignUp"
    android:layout_width="wrap_content"
    android:text="Forgot password?"
    android:layout_marginTop="15dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textColor="#838383"
    android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>